# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: auth.py  chat.py  database.py  documents.py  main.py  pyproject.toml  saved_docs.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/src/: html2pdf.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/src/app/components/: ChatPanel.tsx  GenericForm.tsx  GenericPreview.tsx  MyDocumentsModal.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/app/login/: page.tsx
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE
